hphp/hack/test/typecheck/as_expression/class2.php.like_types.exp
File "class2.php", line 16, characters 13-28:
Invalid argument (Typing[4110])
File "class2.php", line 27, characters 20-28:
Expected ~B<string> because it is an unenforceable type
File "class2.php", line 16, characters 28-28:
But got B<mixed>
File "class2.php", line 19, characters 13-31:
Invalid argument (Typing[4110])
File "class2.php", line 27, characters 20-28:
Expected ~B<string> because it is an unenforceable type
File "class2.php", line 19, characters 28-31:
But got B<mixed>
File "class2.php", line 15, characters 28-28:
The type B expects 1 type parameter(s) (Typing[4101])
File "class2.php", line 4, characters 13-13:
Definition is here
File "class2.php", line 16, characters 28-28:
The type B expects 1 type parameter(s) (Typing[4101])
File "class2.php", line 4, characters 13-13:
Definition is here
